Alignment fix on info-panel and video links

--- a/public/styles/grid.css
+++ b/public/styles/grid.css
@@ -34,6 +34,7 @@
         flex-wrap: wrap;
         flex-flow: column;
         align-items: flex-start;
+        margin: 12px 30px;
     }
 
     .option-item{
