--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -576,7 +576,7 @@ END LIVE STREAM
     .videoLinks {
         position: absolute;
         bottom: 0;
-        margin-left: 30px;
+        margin-left: 20px;
     }
 }
 
